# ChangeLog for app-admin/sudox
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*sudox-3.10 (07 May 2012)

  12 May 2012; Martin Väth <martin@mvath.de>
  base->eutils

  07 May 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*sudox-3.8 (04 May 2012)

  04 May 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*sudox-3.7 (10 Apr 2012)

  15 Apr 2012; Martin Väth <martin@mvath.de>
  Inherit base

  10 Apr 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*sudox-3.6 (08 Apr 2012)

  08 Apr 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*sudox-3.5 (28 Feb 2012)

  19 Mar 2012; Martin Väth <martin@mvath.de>
  Use vcs-snapshot.eclass

  28 Feb 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*sudox-3.4 (26 Dec 2011)

  26 Dec 2011; Martin Väth <martin@mvath.de>
  Add app-admin/sudo to RDEPEND

  19 Dec 2011; Martin Väth <martin@mvath.de>
  New ebuild from scratch.