@@ -1,1 +1,1 @@
-DIST sudox-3.10.tar.gz 5065 RMD160 9192b3a0695ef86a1524c7fc24de83d8bc8e31d5 SHA1 c7a29637c29257e70f4db8447bc786ad0504ff01 SHA256 ff597d8da39cdaa0d220760f83a0090fea632ad548460bb5bfe0b93fee6fbd58
+DIST sudox-3.11.tar.gz 5220 SHA256 9b1d47b398825be1356067eb2800ce831ed1df2abada3b85f63b14b201ce33d2 SHA512 5acfa2936c0b1f383d5a7153abca3d1c4e4daceb4c56b6ff819b09fb5c4a165344a0a756c114bba137860b5309018aa59a2c1b3b3877e56988c620ad1c093ab8 WHIRLPOOL 6c2202c4f71b45a0a578facd4f0546b722752cb06aa0b876c37bb45ba0f2dbe5498f7c061e6e3f432416821a6eb93ecf16595b62fd102315a625c89a5f9b16ff
