@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sudox-3.11 (14 Aug 2012)
+
+  14 Aug 2012; Martin Väth <martin@mvath.de>
+  Version bump, remove old ebuild.
+
 *sudox-3.10 (07 May 2012)
 
   12 May 2012; Martin Väth <martin@mvath.de>
